tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/bad-byte-escape.stderr
TOML parse error at line 1, column 14
  |
1 | naughty = "\xAg"
  |              ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
